# uets

./: Cargo.toml  README.md  run  setup
data/: io.github.seadve.Uets.gschema.xml
data/populator/: attendance.ods  refrigerator.ods
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: ai_chat_dialog.ui  ai_chat_message_row.ui  camera.ui  camera_live_feed_dialog.ui  camera_live_feed_window.ui  camera_viewfinder.ui  dashboard_view.ui  date_time_button.ui  date_time_dialog.ui  date_time_picker.ui  date_time_range_button.ui  date_time_range_dialog.ui  date_time_window.ui  detected_wo_id_dialog.ui  detected_wo_id_row.ui  entities_view.ui  entity_data_dialog.ui  entity_details_pane.ui  entity_photo_gallery_cell.ui  entity_photo_gallery_dialog.ui  entity_row.ui  entry_dialog.ui  entry_window.ui  graph.ui  information_row.ui  receive_dialog.ui  window.ui  (+14 more)
src/: ai_chat_message.rs  ai_chat_message_list.rs  application.rs  camera.rs  colors.rs  config.rs  date_time.rs  date_time_boxed.rs  date_time_pair.rs  date_time_range.rs  date_time_updater.rs  db.rs  detected_wo_id_item.rs  detected_wo_id_list.rs  detector.rs  entity.rs  entity_data.rs  entity_data_index.rs  entity_data_store.rs  entity_entry_tracker.rs  entity_expiration.rs  entity_expired_tracker.rs  entity_id.rs  entity_kind.rs  entity_list.rs  entity_tracker.rs  format.rs  fuzzy_filter.rs  fuzzy_sorter.rs  id.rs  jpeg_image.rs  limit_reached.rs  log.rs  macros.rs  main.rs  md2pango.rs  operation_mode_ext.rs  rc522.rs  relay.rs  remote.rs  (+24 more)
src/ui/: ai_chat_dialog.rs  ai_chat_message_row.rs  camera.rs  camera_live_feed_dialog.rs  camera_live_feed_window.rs  camera_viewfinder.rs  dashboard_view.rs  date_time_button.rs  date_time_dialog.rs  date_time_picker.rs  date_time_range_button.rs  date_time_range_dialog.rs  date_time_window.rs  detected_wo_id_dialog.rs  detected_wo_id_row.rs  entities_view.rs  entity_data_dialog.rs  entity_details_pane.rs  entity_photo_gallery_cell.rs  entity_photo_gallery_dialog.rs  entity_row.rs  entry_dialog.rs  entry_window.rs  graph.rs  information_row.rs  mod.rs  receive_dialog.rs  receive_window.rs  search_entry.rs  send_dialog.rs  send_window.rs  settings_view.rs  stock_details_pane.rs  stock_graph.rs  stock_row.rs  stocks_view.rs  test_window.rs  time_graph.rs  time_picker.rs  timeline_row.rs  (+4 more)
subproject/relay/: relay.ino
subproject/rfid_reader/: rfid_reader.ino
