[package]
name = "uets"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
anyhow = "1.0"
async-lock = "3.4.0"
async-net = "2.0.0"
calamine = "0.26.1"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2.1"
futures-channel = "0.3.31"
futures-util = "0.3.31"
fuzzy-matcher = "0.3.7"
genpdf = { version = "0.2.0", features = ["images"] }
gtk = { package = "gtk4", version = "0.9", features = ["gnome_46"] }
gsettings-macro = "0.2.1"
gst = { package = "gstreamer", version = "0.23.3" }
gst-plugin-gtk4 = "0.13"
gvdb = { version = "0.7", features = ["gresource"] }
heck = "0.5.0"
heed = "0.20.5"
image = "0.23"
indexmap = { version = "2.6", features = ["serde"] }
plotters = "0.3.7"
plotters-cairo = "0.7.0"
regex = "1.11.1"
rppal = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wormhole = { package = "magic-wormhole", version = "0.7" }
xlsxwriter = { package = "rust_xlsxwriter", version = "0.79", features = [
    "chrono",
] }
